--- a/package.json
+++ b/package.json
@@ -1,38 +1,29 @@
 {
-  "name": "just-tech-news",
+  "name": "tech-blog",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines": {
-    "node": "^12"
-  },
   "scripts": {
-    "test": "jest",
-    "start": "nodemon server.js",
-    "seed": "node seeds/index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/reynolkb/just-tech-news.git"
+    "url": "git+https://github.com/coding-boot-camp/module-14-project-mvc.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/reynolkb/just-tech-news/issues"
+    "url": "https://github.com/coding-boot-camp/module-14-project-mvc/issues"
   },
-  "homepage": "https://github.com/reynolkb/just-tech-news#readme",
+  "homepage": "https://github.com/coding-boot-camp/module-14-project-mvc#readme",
   "dependencies": {
-    "bcrypt": "^5.0.0",
-    "connect-session-sequelize": "^7.0.4",
+    "bcrypt": "^4.0.1",
+    "connect-session-sequelize": "^6.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-handlebars": "^5.2.0",
-    "express-session": "^1.17.1",
-    "mysql2": "^2.2.5",
-    "nodemon": "^2.0.6",
-    "sequelize": "^6.3.5"
-  },
-  "devDependencies": {
-    "jest": "^26.6.1"
+    "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
+    "mysql2": "^2.0.1",
+    "sequelize": "^5.21.2"
   }
 }
